# AMELI-App-Template

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  VERSION  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  main-push-audit.yml
config/: Caddyfile.example  app.yaml.example
deploy/caddy/: Caddyfile.example
deploy/git-hooks/: pre-push
deploy/systemd/: ameli-app-api.service  ameli-app-backup.service  ameli-app-backup.timer  ameli-app-capture-primary.timer  ameli-app-capture-secondary.timer  ameli-app-capture.service  ameli-app-capture.timer  ameli-app-capture@.service  ameli-app-maintenance.service  ameli-app-maintenance.timer  ameli-app-notifier.service  ameli-app-verify-audit.service  ameli-app-verify-audit.timer  ameli-app-web.service  ameli-app-worker.service  ameli-app-worker.timer
docs/: ARCHITECTURE.md  AUDIT_WEBFLEET_2026-07-21.md  BUILDING_NEW_APP.md  CLAUDE_HANDOFF_2026-06-02_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-03_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-04_EMAIL_MFA_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-04_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-05_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-06_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-07_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-08_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-09_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-10_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-11_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-12_SECURITY_BLOCKS_1_2_3.md  CLAUDE_HANDOFF_2026-06-12_SECURITY_BLOCK_4.md  CLAUDE_HANDOFF_2026-06-13_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-15_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-16_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-17_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-18_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-19_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-20_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-21_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-22_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-23_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-24_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-25_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-27_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-06-30_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-01_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-02_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-03_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-06_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-07_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-08_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-09_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-10_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-11_TEMPLATE_DEV.md  CLAUDE_HANDOFF_2026-07-13_TEMPLATE_DEV.md  (+38 more)
locale/en/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
migrations/: env.py
scripts/: _common.sh  backup.sh  install-pre-push-hook.sh  install.sh  install_dev.sh  restore.sh  uninstall.sh  update.sh  validate_installation.sh
src/ameli_app/: access_store.py  api.py  cli.py  config.py  database.py  logging_utils.py  password_policy.py  security.py  version.py  web.py
src/ameli_app/static/css/: app.css
src/ameli_app/static/js/: admin-panel.js  app.js  profile.js
src/ameli_app/templates/: admin.html  dashboard.html
src/ameli_app/workers/: __init__.py  capture.py  maintenance.py  notify.py
src/ameli_web/: __init__.py  admin_views.py  asgi.py  error_views.py  pagination.py  request_id.py  settings.py  telemetry.py  urls.py  utils.py  wsgi.py
src/ameli_web/accounts/: __init__.py  admin.py  apps.py  av.py  circuit_breaker.py  context_processors.py  forms.py  hashers.py  mfa.py  middleware.py  models.py  permissions.py  services.py  signals.py  urls.py  validators.py  views.py
src/ameli_web/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_username.py  0003_mfa.py  0004_mfa_email.py  0005_mfa_stacked.py  0006_apitoken.py  0006_emailchangerequest.py  0007_apitoken_scopes.py  0007_throttlecounter.py  0008_user_locked_at_user_locked_reason.py  0009_outboundemail.py  0010_outboundemail_audit_payload.py  (+4 more)
src/ameli_web/admin_views/: __init__.py  _common.py  audit.py  exports.py  maintenance.py  metrics.py  panel.py  sessions.py  sudo.py  users.py
src/ameli_web/audit/: __init__.py  admin.py  apps.py  models.py
src/ameli_web/dashboard/: __init__.py  apps.py  views.py
src/ameli_web/settings/: __init__.py  applications.py  auth.py  base.py  cookies.py  database.py  email.py  i18n_static.py  integrations.py  media.py  security_headers.py
src/ameli_web/templates/: _pagination_footer.html  base.html  error_generic.html
src/ameli_web/webhooks/: apps.py  models.py  services.py  signals.py
tests/: conftest.py  test_a11y_live_region.py  test_account_guards.py  test_admin_audit_export.py  test_admin_audit_pagination.py  test_admin_mfa.py  test_admin_sessions_pagination.py  test_admin_users_export.py  test_admin_users_pagination.py  test_admin_webhooks_ui.py  test_api.py  test_api_token_scopes.py  test_api_tokens.py  test_audit_date_presets.py  test_audit_payload_search.py  test_auth_failures_alert.py  test_avatar_av_scan.py  test_avatar_transform.py  test_avatar_validation.py  test_backup_restore.py  test_backup_sh_pg_url_strip.py  test_backup_systemd_units.py  test_ci_workflow.py  test_circuit_breaker.py  test_clear_filters.py  test_cli.py  test_cli_configure.py  test_cli_env_autodetect.py  test_cli_shell.py  test_cli_template_check.py  test_cli_tokens.py  test_client_ip_trusted_proxies.py  test_code_review_fixes_20260615.py  test_common_sh_slug_autodetect.py  test_config.py  test_cookie_thief_hardening.py  test_dashboard.py  test_disabled_user_session.py  test_docker_stack.py  test_email_change_double_opt_in.py  (+71 more)
tests/e2e/: conftest.py  test_a11y_announce.py  test_accessibility.py  test_avatar_upload.py  test_login_flow.py  test_password_change.py
tests/js/: debounce.test.js  password.test.js
tools/: Setup-SshKey.md  Setup-SshKey.ps1  sri_compute.py
(+51 files in other folders)
