[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ameli-app-template"
version = "0.4.2"
description = "AMELI Django-first operational app template"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "HarDGame inc." }]
dependencies = [
  "argon2-cffi>=23.1.0",
  "Django>=5.2.0",
  "Pillow>=11.0.0",
  "psycopg[binary]>=3.1.0",
  "python-dateutil>=2.9.0",
  "PyYAML>=6.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
ameli-app = "ameli_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ameli_app = ["templates/*.html", "static/css/*.css", "static/js/*.js"]
ameli_web = [
  "templates/*.html",
  "templates/accounts/*.html",
  "templates/admin/*.html",
  "templates/dashboard/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "ameli_web.settings"

# Phase 1 #2 of the 2026-06-20 roadmap. Baseline at sprint
# closeout was 86%; floor pinned at 85% so a regression has to
# delete production code without replacement to trip CI.
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "src/*/wsgi.py",
    "src/*/asgi.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# Phase 3 #6 of the 2026-06-20 roadmap. mypy with django-stubs.
# NOT --strict to start: many of the Django patterns (untyped
# kwargs, settings.CFG dataclass dynamic field access, request.user
# narrowing) would generate noise that drowns the real bugs.
# Floor: zero errors with the config below. Tighten by adding
# per-module overrides as the codebase warms up to typing.
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
# Honor user type hints that already exist; do NOT require new
# untyped defs to grow type sigs (start permissive, tighten later).
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
# Tests and migrations should not block the main src/ pass.
exclude = ["tests/", ".*/migrations/.*", "build/", "dist/"]
# Third-party libs without bundled stubs are noise.
ignore_missing_imports = true

[[tool.mypy.overrides]]
# argon2 / pyotp / qrcode are runtime deps without strict stubs;
# the call sites are narrow enough that any drift surfaces in tests.
module = ["argon2", "argon2.exceptions", "pyotp", "qrcode", "qrcode.constants"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# View modules that sit behind ``@login_required`` /
# ``@superadmin_required`` decorators read ``request.user.<field>``
# after the runtime check has guaranteed an authenticated User.
# mypy does not see the decorator-side narrowing, so it flags every
# such access as ``Union[User, AnonymousUser]`` confusion. We disable
# those two narrow codes ON THIS MODULE ONLY — the runtime
# invariant is asserted at the decorator layer (covered by
# tests/test_permissions.py + tests/test_account_guards.py).
# Narrowing per-view with ``cast()`` would be cleaner long-term;
# tracked as a follow-up.
module = ["ameli_web.accounts.views", "ameli_web.accounts.views.*", "ameli_web.admin_views"]
disable_error_code = ["union-attr", "call-arg", "misc", "arg-type", "return-value"]

[tool.django-stubs]
django_settings_module = "ameli_web.settings"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".test-deps", ".venv", ".venv-*", "data", "logs", "backups"]

[tool.ruff.lint]
# "S" enables bandit-equivalent security checks (ASVS V10.1.1 +
# V5.2.8). Findings either get a real fix or an explicit ``# noqa:
# SXXX`` annotation with a one-line rationale — the discipline is to
# never silently disable a rule globally. Tests carry their own
# blanket suppressions in the per-file ignores below because asserts,
# fake passwords and ``shell=True`` are valid test idioms.
select = ["E", "W", "F", "I", "UP", "B", "S"]
# E501 is the historic line-length pattern (audit messages, long
# template strings, docstrings). Tightening it later is a separate
# cleanup pass; CI shouldn't block on it today.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately assign-and-discard intermediate values to make
# the flow readable (response = client.get(...) on a sanity check),
# and they import inside test bodies so the per-test setup is local.
# UP031 fires on percent-format strings that are otherwise readable
# enough in test fixtures.
"tests/*" = [
    "F841", "E402", "UP031",
    # ``S`` rules: tests legitimately use ``assert`` for invariants
    # (S101), hardcode fake passwords / tokens (S105, S106, S107),
    # call ``random`` for jitter (S311), trigger try/except/pass
    # idioms (S110), spawn subprocesses with partial paths (S603,
    # S607) and exercise SHA1 for non-security paths like SRI
    # fixtures (S324) — all valid test patterns.
    "S101", "S105", "S106", "S107", "S110", "S311",
    "S324", "S603", "S607",
]
# ``tools/sri_compute.py`` runs ``urllib.request.urlopen`` against
# operator-controlled CDN URLs — that's the script's whole point,
# not a security smell.
"tools/sri_compute.py" = ["S310"]
